# Meridian

./: .flake8  .gitignore  AUDIT_REPORT_2026_03_20.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  Makefile  MarketDataCollector.sln  Meridian.sln  README.md  mdc-brainstorm.skill  package-lock.json  package.json  prompt-generation-results.json
.claude/agents/: mdc-blueprint.md  mdc-brainstorm.md  mdc-cleanup.md  mdc-docs.md  mdc-provider-builder.md
.claude/skills/: skills_provider.py
.devcontainer/: devcontainer.json
.github/: CS0101_FIX_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  TEST_MATRIX_FIX_SUMMARY.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template_desktop.md
.github/agents/: code-review-agent.md  documentation-agent.md  mdc-blueprint-agent.md  mdc-brainstorm-agent.md  mdc-bug-fix-agent.md  mdc-cleanup-agent.md  mdc-performance-agent.md  mdc-provider-builder-agent.md  mdc-test-writer-agent.md
.github/prompts/: README.md  add-data-provider.prompt.yml  add-export-format.prompt.yml  code-review.prompt.yml  fix-build-errors.prompt.yml  fix-code-quality.prompt.yml  fix-test-failures.prompt.yml  (+4 more)
benchmarks/: BOTTLENECK_REPORT.md  run-bottleneck-benchmarks.sh
config/: appsettings.sample.json
docs/: DEPENDENCIES.md  HELP.md  README.md  toc.yml
docs/ai/: README.md  (+1 more)
scripts/: compare_benchmarks.py
sdk/python/: README.md  pyproject.toml
sdk/python/mdc/: __init__.py  _exceptions.py  client.py  models.py
sdk/python/tests/: conftest.py  test_client.py
tests/: Directory.Build.props  coverlet.runsettings
(+3340 files in other folders)
