[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdc-sdk"
version = "0.1.0"
description = "Python SDK for Market Data Collector — async live feed iterator, pandas DataFrame output, snap() and history() helpers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["market-data", "trading", "finance", "async", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-timeout>=2.3",
]

[project.urls]
Homepage = "https://github.com/rodoHasArrived/Market-Data-Collector"
Repository = "https://github.com/rodoHasArrived/Market-Data-Collector"

[tool.hatch.build.targets.wheel]
packages = ["mdc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
